fix: Overlaping messages

--- a/src/main/less/chat.less
+++ b/src/main/less/chat.less
@@ -34,7 +34,7 @@
   flex-flow: column wrap;
   justify-content: left;
   margin: .3em 1em;
-  height: 25px;
+  height: fit-content;
   flex-shrink: 0;
 }
 
